fix: address gap between text and icon #187

--- a/src/styles/style-button.scss
+++ b/src/styles/style-button.scss
@@ -43,6 +43,7 @@
   .textSlot {
     display: flex;
     flex: 1;
+    gap: 0; // override button default
   }
 }
 
